--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <meta http-equiv="refresh" content="5">
     </head>
     <body>
-        
+        <header>
+            <h1>Horários do Dia</h1>
+        </header>
+        <section>
+            <p>Agora são 16:25H da tarde!</p>
+        </section>
+        <footer>
+            &copy Copyright Heberth Alexandre
+        </footer>
     </body>
 </html>
