--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
         <title>Horários do Dia</title>
         <meta name="author" content="Heberth Alexandre">
         <meta http-equiv="refresh" content="5">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        <header>
+        <header id="header">
             <h1>Horários do Dia</h1>
         </header>
-        <section>
+        <section id="mudanca-info">
             <p>Agora são 16:25H da tarde!</p>
         </section>
-        <footer>
+        <footer id="footer">
             &copy Copyright Heberth Alexandre
         </footer>
     </body>
