--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
         <meta charset="utf-8">
         <title>Horários do Dia</title>
         <meta name="author" content="Heberth Alexandre">
-        <meta http-equiv="refresh" content="5">
+        <!--<meta http-equiv="refresh" content="5">-->
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
-        <header id="header">
-            <h1>Horários do Dia</h1>
-        </header>
-        <section id="mudanca-info">
-            <p>Agora são 16:25H da tarde!</p>
-        </section>
-        <footer id="footer">
-            &copy Copyright Heberth Alexandre
-        </footer>
+        <div class="container">
+            <header id="header">
+                <h1>Horários do Dia</h1>
+            </header>
+            <section id="mudanca-info">
+                <p>Agora são 16:25H da tarde!</p>
+            </section>
+            <footer id="footer">
+                &copy Copyright Heberth Alexandre
+            </footer>
+        </div>
     </body>
 </html>
