--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
                 &copy Copyright Heberth Alexandre
             </footer>
         </div>
+        <script src="js/index.js"></script>
     </body>
 </html>
