--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Horários do Dia</title>
         <meta name="author" content="Heberth Alexandre">
-        <!--<meta http-equiv="refresh" content="5">-->
+        <meta http-equiv="refresh" content="5">
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
